# comp-core

./: CMakeLists.txt  LICENSE
src/include/core/: algorithm.h  scalar.h  traits.h  types.h
src/include/core/internal/: abi.h  data.h  scalar.h
src/include/core/internal/simd/: avx.h  emu.h
src/include/core/internal/simd/emu/: avx.h
src/include/core/internal/simd/emu/march/: knl.h
src/include/core/simd/: avx.h
